883846:SONR FIX : ProductDetailsHelper.java